# riscv-emulator

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  decoder.cpp  decoder.h  interpreter.cpp  interpreter.h  main.cpp
compiler/: CMakeLists.txt
compiler/src/: ast.h  astprinter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  visitor.cpp  visitor.h
emulator/: CMakeLists.txt
emulator/src/: decoder.cpp
shared/: CMakeLists.txt
shared/include/shared/: error.h
